fix: set overflow-x to hidden

--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -9,6 +9,7 @@
 html {
   font-size: $font-size;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
